--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "hirez.js": "^2.0.0",
-    "mongoose": "^5.2.10"
+    "mongoose": "^5.2.10",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
